<?xml version="1.0" encoding="UTF-8"?>



<!--
    POM file.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <parent>
        <groupId>org.apache.ignite</groupId>
        <artifactId>ignite-parent-internal</artifactId>
        <version>2.16.999-SNAPSHOT</version>
        <relativePath>../parent-internal/pom.xml</relativePath>
    </parent>

    <artifactId>ignite-web-console</artifactId>    
    <packaging>pom</packaging>
    <url>http://ignite.apache.org</url>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <spring.boot.version>3.4.5</spring.boot.version>
        <spring-ai.version>1.1.2</spring-ai.version>
        <web-console.ignite.version>2.16.999-SNAPSHOT</web-console.ignite.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>        
        <commons.compress.version>1.20</commons.compress.version>
        <vertx.version>4.4.5</vertx.version>
        <tinkerpop.version>3.7.2</tinkerpop.version>
        <node.version>v20.12.2</node.version>
        <npm.version>10.9.2</npm.version>
    </properties>

    <modules>
        <module>quercus-webapps</module>
        <module>web-console-common</module>
        <module>web-console-server</module>        
        <module>web-agent</module>
    </modules>

    <profiles>
        <profile>
            <id>release</id>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>com.github.eirslett</groupId>
                            <artifactId>frontend-maven-plugin</artifactId>
                            <version>1.11.0</version>
                            <configuration>
                                <nodeVersion>${node.version}</nodeVersion>
                                <installDirectory>target</installDirectory>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <groupId>com.github.eirslett</groupId>
                        <artifactId>frontend-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>build frontend</id>
                                <goals>
                                    <goal>npm</goal>
                                </goals>

                                <phase>compile</phase>

                                <configuration>
                                    <skip>true</skip>
                                    <workingDirectory>frontend</workingDirectory>
                                    <arguments>run build</arguments>
                                    <environmentVariables>
                                        <NODE_ENV>production</NODE_ENV>
                                    </environmentVariables>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-clean-plugin</artifactId>
                        <version>2.5</version>
                        <executions>
                            <execution>
                                <id>clean-frontend-build</id>
                                <goals>
                                    <goal>clean</goal>
                                </goals>
                                <phase>process-resources</phase>
                                <configuration>
                                    <excludeDefaultDirectories>true</excludeDefaultDirectories>
                                    <filesets>
                                        <fileset>
                                            <directory>${project.basedir}/frontend/build</directory>
                                        </fileset>
                                    </filesets>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.8.0</version>
                        <inherited>false</inherited>

                        <executions>
                            <execution>
                                <id>release-web-console</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptors>
                                        <descriptor>assembly/release-web-console.xml</descriptor>
                                    </descriptors>
                                    <finalName>ignite-web-console-${project.version}</finalName>
                                    <outputDirectory>target</outputDirectory>
                                    <appendAssemblyId>false</appendAssemblyId>
                                </configuration>
                            </execution>                            
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>        
            <plugin>
		          <artifactId>maven-javadoc-plugin</artifactId>		          
		          <configuration>
		            <skip>true</skip>
	              </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>sonatype</id>
            <name>OSS Sonatype</name>
            <url>https://oss.sonatype.org/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>aliyunmaven</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
